[package]
name = "hw201"
version = "0.0.1"
edition = "2021"
authors = ["emilyhong <emily.hong@viam.com>"]
resolver = "2"
rust-version = "1.83"

[dependencies]
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"], version = "0.4.1-rc10", rev = "0.4.1-rc10"}

[package.metadata.com.viam]
module = true
